cluster/apps/default/mqtt/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto-mqtt
  namespace: default
spec:
  entryPoints:
    - mqtt
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mosquitto
          port: 1883
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto-mqtts
  namespace: default
spec:
  entryPoints:
    - mqtts
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mosquitto
          port: 8883
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto-openmqtts
  namespace: default
spec:
  entryPoints:
    - openmqtts
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mosquitto
          port: 8884
